--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -37,21 +37,21 @@ for important requirements for download pages for Apache projects.
 
 == Apache NetBeans 11.0
 
-Apache NetBeans 11.0 is the latest version of the IDE. It was released on April, 2019.
+Apache NetBeans 11.0 is the latest version of the IDE. It was released on April 4, 2019.
 
 link:nb110/index.html[Features, role="button"] link:nb110/nb110.html[Download, role="button success"]
 
 
 == Apache NetBeans 10.0
 
-Apache NetBeans 10.0 was released on the 27th of December, 2018.
+Apache NetBeans 10.0 was released on December 27, 2018.
 
 link:nb100/index.html[Features, role="button"] link:nb100/nb100.html[Download, role="button success"]
 
 [[previous]]
 == Apache NetBeans 9.0
 
-Apache NetBeans 9.0 was released on the 29th of July, 2018.
+Apache NetBeans 9.0 was released on the July 29, 2018.
 
 link:nb90/[Features, role="button"] link:nb90/nb90.html[Download, role="button success"] 
 
