--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -60,6 +60,10 @@ Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#
 
 **Tip:** Experimental installers for Apache NetBeans 11.0 are available link:https://github.com/rtaneja1/incubator-netbeans/tree/installer-bin-11vc4/nbbuild/installer/binaries[here], however note these have not been validated by Apache yet, which is scheduled for the next release, based on work done in link:https://github.com/apache/incubator-netbeans/pull/1052[PR-1052].
 
+Also see the following YouTube clip:
+
+video::vCN_XvXQzzo[youtube, title="The Rough Guide to Apache NetBeans 11.0"]
+
 == Building from source
 
 To build Apache NetBeans (incubating) 11.0 from source you need:
