Using TIP: for tips.

--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -31,6 +31,7 @@ for important requirements for download pages for Apache projects.
 :description: Apache NetBeans 11.0 Download
 :toc: left
 :toc-title:
+:icons: font
 
 Apache NetBeans (incubating) 11.0 was announced on April the 4th, 2019.
 See link:/download/nb110/index.html[Apache NetBeans 11.0 Features] for a full list of features.
@@ -58,7 +59,7 @@ NOTE: Using https below is highly recommended.
 ////
 Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity] of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).  The PGP keys used to sign this release are available link:https://www.apache.org/dist/incubator/netbeans/KEYS[here].
 
-**Tip:** Experimental installers for Apache NetBeans 11.0 are available link:https://github.com/rtaneja1/incubator-netbeans/tree/installer-bin-11vc4/nbbuild/installer/binaries[here], however note these have not been validated by Apache yet, which is scheduled for the next release, based on work done in link:https://github.com/apache/incubator-netbeans/pull/1052[PR-1052].
+TIP: Experimental installers for Apache NetBeans 11.0 are available link:https://github.com/rtaneja1/incubator-netbeans/tree/installer-bin-11vc4/nbbuild/installer/binaries[here], however note these have not been validated by Apache yet, which is scheduled for the next release, based on work done in link:https://github.com/apache/incubator-netbeans/pull/1052[PR-1052].
 
 Also see the following YouTube clip:
 
