--- a/netbeans.apache.org/src/content/download/nb110/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/index.asciidoc
@@ -160,7 +160,7 @@ That's cleaner, right?
 
 ==== And more
 
-See link:+https://cwiki.apache.org/confluence/pages/viewpage.action?pageId=103091452+[our wiki] for more
+See link:https://cwiki.apache.org/confluence/pages/viewpage.action?pageId=103091452[our wiki] for more
 improvements to the `switch` expression.
 
 == Java EE support
