Flip order of the process
I cargo-culted this in Zipkin and @justinmclean noted there was an ordering bug.

--- a/netbeans.apache.org/src/content/community/committer.asciidoc
+++ b/netbeans.apache.org/src/content/community/committer.asciidoc
@@ -51,10 +51,10 @@ The process is similar to other Apache projects, such as link:https://github.com
 . A (P)PMC member starts a *[DISCUSS]* thread on the private@ list explaining why you want to elect someone, based on their merit, activity and involvement of a contributor.
 . If there's no opposition, the (P)PMC member starts a *[VOTE]* thread on the private@ mailing list to turn the contributor into a committer and/or a (P)PMC member. Make sure to specify which role you want to elect the people for. (Example text etc to come.)
 . After at least 72 hours, tally the vote with a *[VOTE][RESULT]* message. (Example text etc to come.)
+. Send the *[NOTICE]* to Incubator PMC and wait 72 hours. (Example text etc to come.)
 . Send invitation to the committer, to invite them to be a committer. Example invitations: link:https://cwiki.apache.org/confluence/display/FLEX/New+committer+or+PMC+member+invitation[from the FLEX project],
 or link:http://apache-wicket.1842946.n4.nabble.com/Re-Invitation-to-become-Wicket-committer-Andrea-del-Bene-td4660253.html[Apache Wicket].
 . An account needs to be created for the new committer, if they accept the invitation that was sent.
 . Once created, the new user can then be added as a committer at link:https://whimsy.apache.org/roster/ppmc/netbeans[whimsy.apache.org]
-. In parallel, send the *[NOTICE]* to Incubator PMC and wait 72 hours. (Example text etc to come.)
 . Then add the PPMC member at link:https://whimsy.apache.org/roster/ppmc/netbeans[whimsy.apache.org] and optionally announce on the dev list (Example text to come).
 
