Removing duplicated title.

--- a/netbeans.apache.org/src/content/about/history.asciidoc
+++ b/netbeans.apache.org/src/content/about/history.asciidoc
@@ -26,9 +26,7 @@
 :toc-title:
 :icons: font
 
-== Apache NetBeans History
-
-=== The student project
+== The student project
 
 NetBeans started as a student project (originally called Xelfi) in the Czech
 Republic, in 1996. The goal was to write a link:https://en.wikipedia.org/wiki/Delphi_%28IDE%29[Delphi]-like Java IDE (Integrated
