Updating post-incubation links (#355)
Removing 'incubator' from links.

--- a/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
+++ b/netbeans.apache.org/src/content/community/mailing-lists.asciidoc
@@ -44,10 +44,10 @@ This list is also useful as well for those using the NetBeans APIs to develop mo
 
 Using prefix tags in the subject line, such as [ java ] or [ javascript ] is encouraged, to clearly distinguish the topic you're addressing in your e-mail.
 
-- Mailing list address: link:mailto:users@netbeans.incubator.apache.org[users@netbeans.incubator.apache.org]
-- To subscribe please send an email to: link:mailto:users-subscribe@netbeans.incubator.apache.org[users-subscribe@netbeans.incubator.apache.org]
-- To unsubscribe please send an email to: link:mailto:users-unsubscribe@netbeans.incubator.apache.org[users-unsubscribe@netbeans.incubator.apache.org]
-- link:http://mail-archives.apache.org/mod_mbox/incubator-netbeans-users/[See the Apache mailing list archive]
+- Mailing list address: link:mailto:users@netbeans.apache.org[users@netbeans.apache.org]
+- To subscribe please send an email to: link:mailto:users-subscribe@netbeans.apache.org[users-subscribe@netbeans.apache.org]
+- To unsubscribe please send an email to: link:mailto:users-unsubscribe@netbeans.apache.org[users-unsubscribe@netbeans.apache.org]
+- link:http://mail-archives.apache.org/mod_mbox/netbeans-users/[See the Apache mailing list archive]
 - +++ <a href="https://lists.apache.org/list.html?users@netbeans.apache.org">Pony mail archive</a> +++
 
 [[dev]]
@@ -57,10 +57,10 @@ Specifically for those committed to working on the development of Apache
 NetBeans itself, as well as those committed to promoting and documenting it,
 via events and tutorials, etc.
 
-- Mailing list address: link:mailto:dev@netbeans.incubator.apache.org[dev@netbeans.incubator.apache.org]
-- To subscribe please send an email to: link:mailto:dev-subscribe@netbeans.incubator.apache.org[dev-subscribe@netbeans.incubator.apache.org]
-- To unsubscribe please send an email to: link:mailto:dev-unsubscribe@netbeans.incubator.apache.org[dev-unsubscribe@netbeans.incubator.apache.org]
-- link:http://mail-archives.apache.org/mod_mbox/incubator-netbeans-dev/[See the Apache mailing list archive]
+- Mailing list address: link:mailto:dev@netbeans.apache.org[dev@netbeans.apache.org]
+- To subscribe please send an email to: link:mailto:dev-subscribe@netbeans.apache.org[dev-subscribe@netbeans.apache.org]
+- To unsubscribe please send an email to: link:mailto:dev-unsubscribe@netbeans.apache.org[dev-unsubscribe@netbeans.apache.org]
+- link:http://mail-archives.apache.org/mod_mbox/netbeans-dev/[See the Apache mailing list archive]
 - +++ <a href="https://lists.apache.org/list.html?dev@netbeans.apache.org">Pony mail archive</a> +++
 
 [[netcat]]
@@ -68,10 +68,10 @@ via events and tutorials, etc.
 
 Specifically for those involved in the NetBeans Community Acceptance Testing (NetCAT) program.
 
-- Mailing list address: link:mailto:netcat@netbeans.incubator.apache.org[netcat@netbeans.incubator.apache.org]
-- To subscribe please send an email to: link:mailto:netcat-subscribe@netbeans.incubator.apache.org[netcat-subscribe@netbeans.incubator.apache.org]
-- To unsubscribe please send an email to: link:mailto:netcat-unsubscribe@netbeans.incubator.apache.org[netcat-unsubscribe@netbeans.incubator.apache.org]
-- link:http://mail-archives.apache.org/mod_mbox/incubator-netbeans-netcat/[See the Apache mailing list archive]
+- Mailing list address: link:mailto:netcat@netbeans.apache.org[netcat@netbeans.apache.org]
+- To subscribe please send an email to: link:mailto:netcat-subscribe@netbeans.apache.org[netcat-subscribe@netbeans.apache.org]
+- To unsubscribe please send an email to: link:mailto:netcat-unsubscribe@netbeans.apache.org[netcat-unsubscribe@netbeans.apache.org]
+- link:http://mail-archives.apache.org/mod_mbox/netbeans-netcat/[See the Apache mailing list archive]
 - +++ <a href="https://lists.apache.org/list.html?netcat@netbeans.apache.org">Pony mail archive</a> +++
 
 [[announce]]
@@ -82,20 +82,20 @@ for those who do not want to get much traffic though want to keep up with the
 high level developments of Apache NetBeans. No one other than administrators
 are able to write to this mailing list.
 
-- Mailing list address: link:mailto:announce@netbeans.incubator.apache.org[announce@netbeans.incubator.apache.org]
-- To subscribe please send an email to: link:mailto:announce-subscribe@netbeans.incubator.apache.org[announce-subscribe@netbeans.incubator.apache.org]
-- To unsubscribe please send an email to: link:mailto:announce-unsubscribe@netbeans.incubator.apache.org[announce-unsubscribe@netbeans.incubator.apache.org]
-- link:http://mail-archives.apache.org/mod_mbox/incubator-netbeans-announce/[See the Apache mailing list archive]
+- Mailing list address: link:mailto:announce@netbeans.apache.org[announce@netbeans.apache.org]
+- To subscribe please send an email to: link:mailto:announce-subscribe@netbeans.apache.org[announce-subscribe@netbeans.apache.org]
+- To unsubscribe please send an email to: link:mailto:announce-unsubscribe@netbeans.apache.org[announce-unsubscribe@netbeans.apache.org]
+- link:http://mail-archives.apache.org/mod_mbox/netbeans-announce/[See the Apache mailing list archive]
 
 [[commits]]
 === Commits list
 
 Receive GitHub commit messages whenever a commit is done.
 
-- Mailing list address: link:mailto:commits@netbeans.incubator.apache.org[commits@netbeans.incubator.apache.org]
-- To subscribe please send an email to: link:mailto:commits-subscribe@netbeans.incubator.apache.org[commits-subscribe@netbeans.incubator.apache.org]
-- To unsubscribe please send an email to: link:mailto:commits-unsubscribe@netbeans.incubator.apache.org[commits-unsubscribe@netbeans.incubator.apache.org]
-- link:http://mail-archives.apache.org/mod_mbox/incubator-netbeans-commits/[See the Apache mailing list archive]
+- Mailing list address: link:mailto:commits@netbeans.apache.org[commits@netbeans.apache.org]
+- To subscribe please send an email to: link:mailto:commits-subscribe@netbeans.apache.org[commits-subscribe@netbeans.apache.org]
+- To unsubscribe please send an email to: link:mailto:commits-unsubscribe@netbeans.apache.org[commits-unsubscribe@netbeans.apache.org]
+- link:http://mail-archives.apache.org/mod_mbox/netbeans-commits/[See the Apache mailing list archive]
 - +++ <a href="https://lists.apache.org/list.html?commits@netbeans.apache.org">Pony mail archive</a> +++
 
 [[notifications]]
@@ -103,10 +103,10 @@ Receive GitHub commit messages whenever a commit is done.
 
 Receive GitHub notifications whenever someone adds a comment to an issue and whenever a new pull request is opened or closed.
 
-- Mailing list address: link:mailto:notifications@netbeans.incubator.apache.org[notifications@netbeans.incubator.apache.org]
-- To subscribe please send an email to: link:mailto:notifications-subscribe@netbeans.incubator.apache.org[notifications-subscribe@netbeans.incubator.apache.org]
-- To unsubscribe please send an email to: link:mailto:notifications-unsubscribe@netbeans.incubator.apache.org[notifications-unsubscribe@netbeans.incubator.apache.org]
-- link:http://mail-archives.apache.org/mod_mbox/incubator-netbeans-notifications/[See the Apache mailing list archive]
+- Mailing list address: link:mailto:notifications@netbeans.apache.org[notifications@netbeans.apache.org]
+- To subscribe please send an email to: link:mailto:notifications-subscribe@netbeans.apache.org[notifications-subscribe@netbeans.apache.org]
+- To unsubscribe please send an email to: link:mailto:notifications-unsubscribe@netbeans.apache.org[notifications-unsubscribe@netbeans.apache.org]
+- link:http://mail-archives.apache.org/mod_mbox/netbeans-notifications/[See the Apache mailing list archive]
 - +++ <a href="https://lists.apache.org/list.html?notifications@netbeans.apache.org">Pony mail archive</a> +++
 
 == Other channels
@@ -115,5 +115,5 @@ Receive GitHub notifications whenever someone adds a comment to an issue and whe
 - We also have a link:https://www.youtube.com/user/netbeansvideos[YouTube] channel.
 - Meet other users in the unofficial link:https://tinyurl.com/netbeans-slack-signup[NetBeans Slack channel]
 - There is also a NetBeans IRC channel (#netbeans) on link:https://freenode.net/[freenode].
-- Finally we use link:https://github.com/apache/incubator-netbeans[GitHub] as a source repository and link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] for issue reporting.
+- Finally we use link:https://github.com/apache/netbeans[GitHub] as a source repository and link:https://issues.apache.org/jira/projects/NETBEANS/summary[JIRA] for issue reporting.
 
