--- a/netbeans.apache.org/src/content/participate/netcat.asciidoc
+++ b/netbeans.apache.org/src/content/participate/netcat.asciidoc
@@ -43,7 +43,7 @@ This program is the successor of link:http://wiki.netbeans.org/NetCAT[NetCAT] pr
 
 If you have experience with software development and would like to help
 NetBeans become the best IDE, simply fill out the registration form and also
-subscribe to link:mailto:netcat@netbeans.incubator.apache.org[netcat@netbeans.incubator.apache.org] 
+subscribe to link:mailto:netcat@netbeans.apache.org[netcat@netbeans.apache.org] 
 mailing list after submission of the registration form via Subscribe button. If
 you are interested in our previous discussions, browse through the web archive
 of the NetCAT mailing list. See link:/community/mailing-lists.html[mailing lists] for
@@ -57,7 +57,7 @@ acceptable to only evaluate milestone builds, we would truly appreciate it if
 you used and tested the daily development builds.
 
 The main communication channels are link:https://issues.apache.org/jira/browse/NETBEANS[JIRA] and
-netcat@netbeans.incubator.apache.org mailing list, your input may also be
+netcat@netbeans.apache.org mailing list, your input may also be
 requested via additional surveys or online IRC meetings during NetCAT program.
 At the end of the program, you will be asked to submit a Community Acceptance
 (CA) survey in which you can express your opinion as to whether or not the new
