--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -67,14 +67,14 @@ link:nb90/[Features, role="button"] link:nb90/nb90.html[Download, role="button s
 
 You can of course build Apache NetBeans from source. To do so:
 
-. Clone the https://github.com/apache/incubator-netbeans GitHub repository.
+. Clone the https://github.com/apache/netbeans GitHub repository.
 . Install Oracle's Java 8 or Open JDK v8.
 . Install Apache Ant 1.10 or greater (https://ant.apache.org/).
 
-Once you're all set just enter the `incubator-netbeans` directory and type:
+Once you're all set just enter the `netbeans` directory and type:
 
 - `ant` to build the Apache NetBeans IDE.
-  ** Once built, the IDE bits are placed in the `./nbbuild/netbeans` directory. You can run the IDE from within the `incubator-netbeans` directory by typing `./nbbuild/netbeans/bin/netbeans` on unixes (for Windows the command is equivalent).
+  ** Once built, the IDE bits are placed in the `./nbbuild/netbeans` directory. You can run the IDE from within the `netbeans` directory by typing `./nbbuild/netbeans/bin/netbeans` on unixes (for Windows the command is equivalent).
 - `ant tryme` to run the Apache NetBeans IDE.
 
 For details, go here: https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment
@@ -86,9 +86,9 @@ Now that you have built Apache NetBeans from source you may want to link:/partic
 
 This is a list of Apache NetBeans (incubating) repositories:
 
-- https://github.com/apache/incubator-netbeans The main source code repository.
-- https://github.com/apache/incubator-netbeans-website This website's repository.
-- https://github.com/apache/incubator-netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
+- https://github.com/apache/netbeans The main source code repository.
+- https://github.com/apache/netbeans-website This website's repository.
+- https://github.com/apache/netbeans-website-cleanup A repository used to clean up existing documentation from http://netbeans.org
 - Emilian Bold has converted the previous Mercurial repository (http://hg.netbeans.org) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
 
 
