--- a/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
+++ b/netbeans.apache.org/src/content/participate/submit-pr.asciidoc
@@ -65,7 +65,7 @@ link:/participate/build-run-debug-tutorials.html[Watch a series of 5 short video
 === Bootstrapping (do this once)
 
 Since you don't have write permissions to the GitHub apache mirror, you need to
-fork https://github.com/apache/incubator-netbeans in GitHub, this is done using
+fork https://github.com/apache/netbeans in GitHub, this is done using
 the "fork" button on the top right of the GitHub page.
 
 You then need to clone the forked repository in your computer.
@@ -81,10 +81,10 @@ git config --global user.email "john@doe.org"
 
 The `--global` argument can be removed if you want to setup only the current repository.
 
-Also add the Apache NetBeans incubator project as your *upstream* in order to submit PRs:
+Also add the Apache NetBeans project as your *upstream* in order to submit PRs:
 
 ```
-git remote add upstream https://github.com/apache/incubator-netbeans.git
+git remote add upstream https://github.com/apache/netbeans.git
 ```
 
 After all this you're ready to submit pull requests.
@@ -107,7 +107,7 @@ Once your code is ready to review create a *pull request* using the GitHub inter
 
 === Be patient
 
-Once your pull request is submitted to Apache NetBeans it will be visible in this address https://github.com/apache/incubator-netbeans/pulls.
+Once your pull request is submitted to Apache NetBeans it will be visible in this address https://github.com/apache/netbeans/pulls.
 
 The pull request will then be reviewed by the link:/community/who.html[NetBeans Team], once there's time to do so. Please be patient, as this may take some time, depending on other duties and ongoing work.
 
