Remove incubat(or|ion|ing)

--- a/netbeans.apache.org/src/content/community/who.asciidoc
+++ b/netbeans.apache.org/src/content/community/who.asciidoc
@@ -28,7 +28,7 @@
 
 == The Apache NetBeans Team
 
-The Apache NetBeans (incubating) Team members (sorted alphabetically).
+The Apache NetBeans Team members (sorted alphabetically).
 
 === Alexander Simon 
 Committer, PPMC Member
@@ -76,7 +76,7 @@ Committer, PPMC Member
   -  http://bruehlicke.blogspot.com/ 
 
 === Bertrand Delacretaz 
-Incubation Mentor
+Mentor
 
   - apache id: bdelacretaz 
   - Switzerland 
@@ -170,7 +170,7 @@ Committer, PPMC Member
   - WildFly plugin 
 
 === Emmanel Lécharny
-Incubation Mentor
+Mentor
 
   - apache id: elecharny 
   - Symas, Paris, France 
@@ -287,7 +287,7 @@ Committer, PPMC Member
   - http://twitter.com/@tyvole 
 
 === Jim Jagielski
-Incubation Mentor
+Mentor
 
   - apache id: jim 
   - Forest Hill, MD USA 
