--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -84,7 +84,7 @@ Now that you have built Apache NetBeans from source you may want to link:/partic
 [[repos]]
 === Repositories
 
-This is a list of Apache NetBeans (incubating) repositories:
+This is a list of Apache NetBeans repositories:
 
 - https://github.com/apache/netbeans The main source code repository.
 - https://github.com/apache/netbeans-website This website's repository.
