--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -30,7 +30,7 @@ The Apache Software Foundation has set up link:http://community.apache.org/[a
 specific website] designed to help newcomers take their first steps toward
 being part of our Community. 
 
-You can participate in the Apache NetBeans (Incubating) Project in many different ways.
+You can participate in the Apache NetBeans Project in many different ways.
 Here are some ideas:
 
 == Contributing code
