Change 'algo' to 'also' (#364)
Solving a typo.

--- a/netbeans.apache.org/src/content/download/nb110/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/index.asciidoc
@@ -237,7 +237,7 @@ more details.
 
 == Javadoc
 
-For this release we have algo started publishing our Javadoc:
+For this release we have also started publishing our Javadoc:
 
 - link:https://bits.netbeans.org/dev/javadoc/[Latest dev javadoc]
 - link:https://bits.netbeans.org/11.0/javadoc/[Release 11.0 javadoc]
