--- a/netbeans.apache.org/src/content/download/maven/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/maven/index.asciidoc
@@ -76,18 +76,16 @@ If all mirrors are failing, there are <i>backup</i> mirrors (at the end of the m
 
 ++++
 
-== Apache NetBeans (incubating) parent pom 1 
+== Apache NetBeans parent pom 2 
 
 |===
 | | Links  | Checksum | Signature
 
-|Apache NetBeans (incubating) parent pom 1  | link:++[preferred]incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip++[incubating-apache-netbeans-parent-1-source-release.zip] | link:++https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.sha512++[incubating-apache-netbeans-parent-1-source-release.zip.sha512] | link:++https://www.apache.org/dist/incubator/netbeans/incubating-netbeans-mavenutils/apache-netbeans-parent-1/incubating-apache-netbeans-parent-1-source-release.zip.asc++[incubating-apache-netbeans-parent-1-source-release.zip.asc]
+|Apache NetBeans parent pom 2 | link:++[preferred]netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip++[netbeans-parent-2-source-release.zip] | link:++https://www.apache.org/dist/netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip.sha512++[netbeans-parent-2-source-release.zip.sha512] | link:++https://www.apache.org/dist/netbeans/netbeans-parent/netbeans-parent-2/netbeans-parent-2-source-release.zip.asc++[netbeans-parent-2-source-release.zip.asc]
 
 |===
 
 
-
-
 == Previous Versions
 
-Older non-recommended releases can be found on our link:https://archive.apache.org/dist/incubator/netbeans/[archive of netbeans]
+Older non-recommended releases can be found on our link:https://archive.apache.org/dist/netbeans/[archive of netbeans]
