Provide link to download page from Apache NetBeans 11.0 page

--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -90,4 +90,6 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 
 Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+11.0[Apache NetBeans 11 page] for further details.
 
+== Earlier releases
 
+Please visit the link:https://netbeans.apache.org/download/index.html[Apache NetBeans Download page] for further details.
