--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -86,9 +86,9 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 - link:https://lists.apache.org/thread.html/505233e52be5bb6a7f047b7bcaa806c0135920539f7c8a26b3a56ddd@%3Cgeneral.incubator.apache.org%3E[IPMC vote]
 - link:https://lists.apache.org/thread.html/1ecf754fed059b98e199e779add4f957b9f592d568f884cc36dbf9fd@%3Cgeneral.incubator.apache.org%3E[IPMC vote result]
 
-== Release information
+== Release schedule
 
-Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+11.0[Apache NetBeans 11 page] for further details.
+Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+11.0[Apache NetBeans 11 page] for release details on Apache NetBeans 11.0 and see link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
 
 == Earlier releases
 
