--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -62,6 +62,10 @@ link:nb90/[Features, role="button"] link:nb90/nb90.html[Download, role="button s
 - https://netbeans.org/downloads/8.0/
 - https://netbeans.org/downloads/7.4/
 
+== Release schedule
+
+Please visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
+
 [[source]]
 == Building from source
 
