--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -64,7 +64,7 @@ link:nb90/[Features, role="button"] link:nb90/nb90.html[Download, role="button s
 
 == Release schedule
 
-Please visit link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
+Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
 
 [[source]]
 == Building from source
