--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -88,7 +88,7 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 
 == Release schedule
 
-Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+11.0[Apache NetBeans 11 page] for release details on Apache NetBeans 11.0 and see link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
+Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+11.0[Apache NetBeans 11 page] for release details on Apache NetBeans 11.0 and see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
 
 == Earlier releases
 
