--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -90,6 +90,10 @@ As in any other Apache Project, the Apache NetBeans Community approved this rele
 
 Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+11.0[Apache NetBeans 11 page] for release details on Apache NetBeans 11.0 and see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
 
+== Daily builds
+
+Please visit the link:https://builds.apache.org/job/netbeans-linux/ for the daily builds, as well as link:https://builds.apache.org/job/netbeans-windows/.
+
 == Earlier releases
 
 Please visit the link:https://netbeans.apache.org/download/index.html[Apache NetBeans Download page] for further details.
