--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -92,7 +92,7 @@ Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apach
 
 == Daily builds
 
-Please visit the link:https://builds.apache.org/job/netbeans-linux/ for the daily builds, as well as link:https://builds.apache.org/job/netbeans-windows/.
+Please visit the link:https://builds.apache.org/job/netbeans-linux/[https://builds.apache.org/job/netbeans-linux/] for the daily builds, as well as link:https://builds.apache.org/job/netbeans-windows/[https://builds.apache.org/job/netbeans-windows/].
 
 == Earlier releases
 
