--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -66,6 +66,10 @@ link:nb90/[Features, role="button"] link:nb90/nb90.html[Download, role="button s
 
 Please visit the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[release schedule page] for the full release schedule.
 
+== Daily builds
+
+Please visit link:https://builds.apache.org/job/netbeans-linux/[https://builds.apache.org/job/netbeans-linux/] and link:https://builds.apache.org/job/netbeans-windows/[https://builds.apache.org/job/netbeans-windows/] for the daily builds.
+
 [[source]]
 == Building from source
 
