--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -33,4 +33,78 @@
 
 ////
 
-This is the NetBeans 11.1 feature page (work in progress).
+Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[first release of the new quarterly release].
+
+== Java EE
+
+[.feature]
+--
+Payara integration out of the box, with thanks to the Payara team. Java EE 8 support for Maven-based and Gradle-based Web applications.
+
+--
+
+== Java
+
+[.feature]
+--
+As a result you can now:
+
+- Integration of support for JEP-330.
+
+--
+
+== Kotlin
+
+[.feature]
+--
+As a result you can now:
+
+- Syntax coloring for .kt files.
+
+-- 
+
+== Web Frontend: JavaScript/HTML5/PHP
+
+[.feature]
+--
+As a result you can now:
+
+- PHP 7.4.
+
+-- 
+
+== NetBeans Platform / NetBeans APIs
+
+[.feature]
+--
+As a result you can now:
+
+- Create Mode from client code.
+
+-- 
+
+== Appearance
+
+[.feature]
+--
+As a result you can now:
+
+- HiDPI splash screen with product version.
+
+-- 
+
+== Miscellaneous
+
+[.feature]
+--
+As a result you can now:
+
+- Popupswitcher npe fixes.
+
+-- 
+
+
+
+
+
+
