--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -31,7 +31,7 @@
 :source-highlighter: pygments
 :experimental:
 
-Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[first release of the new quarterly release].
+Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[first release of the new quarterly release cycle].
 
 == Java EE
 
@@ -45,9 +45,14 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 
 [.feature]
 --
-As a result you can now:
 
-- Integration of support for JEP-330.
+- Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
+- Inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
+- Code completion for JEP 325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
+- Hint for converting to JEP 325 preview feature for switch expressions: link:https://github.com/apache/netbeans/pull/1193[https://github.com/apache/netbeans/pull/1193]
+- Java Migration profiles: link:https://github.com/apache/netbeans/pull/1212[https://github.com/apache/netbeans/pull/1212]
+- "main" is a new shortcut, that does the same as "psvm", i.e., creates 'public static void main': link:https://github.com/apache/netbeans/pull/1176[https://github.com/apache/netbeans/pull/1176]
+- Fixing automatic Jigsaw module name generation: link:https://github.com/apache/netbeans/pull/1274[https://github.com/apache/netbeans/pull/1274]
 
 --
 
