More java editor enhancements for 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -46,6 +46,8 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 [.feature]
 --
 
+=== Java Editor
+
 - Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
 - Inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
 - Code completion for JEP 325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
@@ -53,6 +55,18 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 - Java Migration profiles: link:https://github.com/apache/netbeans/pull/1212[https://github.com/apache/netbeans/pull/1212]
 - "main" is a new shortcut, that does the same as "psvm", i.e., creates 'public static void main': link:https://github.com/apache/netbeans/pull/1176[https://github.com/apache/netbeans/pull/1176]
 - Fixing automatic Jigsaw module name generation: link:https://github.com/apache/netbeans/pull/1274[https://github.com/apache/netbeans/pull/1274]
+
+=== Graal/Truffle
+
+=== OpenJFX
+
+=== Maven
+
+- Java compiler args, e.g., "--enable-preview", passed to Java editor from Maven: link:https://github.com/apache/netbeans/pull/1173[https://github.com/apache/netbeans/pull/1173]
+- JaCoCo Maven integration is broken in NB 11.0: link:https://github.com/apache/netbeans/pull/1286[https://github.com/apache/netbeans/pull/1286]
+- Prevent Maven libraries from being excluded: link:https://github.com/apache/netbeans/pull/1271[https://github.com/apache/netbeans/pull/1271]
+
+=== Gradle
 
 --
 
