More content for 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -35,16 +35,9 @@ Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Inc
 
 == Java EE
 
-[.feature]
---
 Payara integration out of the box, with thanks to the Payara team. Java EE 8 support for Maven-based and Gradle-based Web applications.
 
---
-
 == Java
-
-[.feature]
---
 
 === Java Editor
 
@@ -60,6 +53,8 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 
 === OpenJFX
 
+- OpenJFX samples included, with thanks to Gluon team: link:https://github.com/apache/netbeans/pull/1241[https://github.com/apache/netbeans/pull/1241]
+
 === Maven
 
 - Java compiler args, e.g., "--enable-preview", passed to Java editor from Maven: link:https://github.com/apache/netbeans/pull/1173[https://github.com/apache/netbeans/pull/1173]
@@ -68,55 +63,30 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 
 === Gradle
 
---
-
-== Kotlin
-
-[.feature]
---
-As a result you can now:
+=== Kotlin
 
 - Syntax coloring for .kt files.
 
--- 
-
 == Web Frontend: JavaScript/HTML5/PHP
 
-[.feature]
---
 As a result you can now:
 
 - PHP 7.4.
 
--- 
-
 == NetBeans Platform / NetBeans APIs
 
-[.feature]
---
 As a result you can now:
 
 - Create Mode from client code.
 
--- 
-
 == Appearance
 
-[.feature]
---
 As a result you can now:
 
 - HiDPI splash screen with product version.
 
--- 
-
 == Miscellaneous
 
-[.feature]
---
 As a result you can now:
 
 - Popupswitcher npe fixes.
-
--- 
-
