completed text content for 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -51,6 +51,9 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 
 === Graal/Truffle
 
+- Using Graal.js 19.0.0 via Scripting in platform/core.network: link:https://github.com/apache/netbeans/pull/1092[https://github.com/apache/netbeans/pull/1092]
+- Separate Truffle source caches between multiple debugging sessions: link:https://github.com/apache/netbeans/pull/1252[https://github.com/apache/netbeans/pull/1252]
+
 === OpenJFX
 
 - OpenJFX samples included, with thanks to Gluon team: link:https://github.com/apache/netbeans/pull/1241[https://github.com/apache/netbeans/pull/1241]
@@ -63,29 +66,47 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 
 === Gradle
 
+- Gradle JavaEE Support: link:https://github.com/apache/netbeans/pull/1215[https://github.com/apache/netbeans/pull/1215]
+- Initial support for modular Java project in Gradle: link:https://github.com/apache/netbeans/pull/1276[https://github.com/apache/netbeans/pull/1276]
+- Java Frontend Application wizard for Gradle: link:https://github.com/apache/netbeans/pull/1154[https://github.com/apache/netbeans/pull/1154]
+- Add debugger support for Gradle Web Projects: link:https://github.com/apache/netbeans/pull/1289[https://github.com/apache/netbeans/pull/1289]
+- Enable Always show Gradle Build output by default: link:https://github.com/apache/netbeans/pull/1220[https://github.com/apache/netbeans/pull/1220]
+- Fixes in the Gradle Java action/replace token providers: link:https://github.com/apache/netbeans/pull/1198[https://github.com/apache/netbeans/pull/1198]
+- Polishing Gradle HTML UI: link:https://github.com/apache/netbeans/pull/1279[https://github.com/apache/netbeans/pull/1279]
+- Update TestSuites in a Gradle Test Run upon completion: link:https://github.com/apache/netbeans/pull/1254[https://github.com/apache/netbeans/pull/1254]
+- Fix startup message re Gradle position info: link:https://github.com/apache/netbeans/pull/1227[https://github.com/apache/netbeans/pull/1227] 
+
 === Kotlin
 
-- Syntax coloring for .kt files.
+- Syntax coloring for .kt files: link:https://github.com/apache/netbeans/pull/1228[https://github.com/apache/netbeans/pull/1228]
+- Correct license information for kotlin icon/grammar: link:https://github.com/apache/netbeans/pull/1229[https://github.com/apache/netbeans/pull/1229]
 
 == Web Frontend: JavaScript/HTML5/PHP
 
-As a result you can now:
-
-- PHP 7.4.
+- PHP 7.4: link:https://github.com/apache/netbeans/pull/1199[https://github.com/apache/netbeans/pull/1199]
+- Jade template code completion: link:https://github.com/apache/netbeans/pull/1254[https://github.com/apache/netbeans/pull/1254]
+- Update PHP samples: link:https://github.com/apache/netbeans/pull/1183[https://github.com/apache/netbeans/pull/1183]
 
 == NetBeans Platform / NetBeans APIs
 
 As a result you can now:
 
-- Create Mode from client code.
+- Create Mode from client code: link:https://github.com/apache/netbeans/pull/1135[https://github.com/apache/netbeans/pull/1135]
+- Adding Java-level registration for TextMate grammars: link:https://github.com/apache/netbeans/pull/1200[https://github.com/apache/netbeans/pull/1200]
+- Missing source level 11 and 12 in a NetBeans module project: link:https://github.com/apache/netbeans/pull/1194[https://github.com/apache/netbeans/pull/1194]
+- Fixed "Behavior of BooleanStateAction has changed" issue: link:https://github.com/apache/netbeans/pull/1250[https://github.com/apache/netbeans/pull/1250]
 
 == Appearance
 
-As a result you can now:
-
-- HiDPI splash screen with product version.
+- HiDPI splash screen with product version: link:https://github.com/apache/netbeans/pull/1246[https://github.com/apache/netbeans/pull/1246]
+- Improve tabcontrol border appearance (HiDPI): link:https://github.com/apache/netbeans/pull/1284[https://github.com/apache/netbeans/pull/1284]
+- Improve icon scaling on HiDPI displays, and prepare ImageUtilities for HiDPI icons: link:https://github.com/apache/netbeans/pull/1273[https://github.com/apache/netbeans/pull/1273]
 
 == Miscellaneous
+
+- Popupswitcher npe fixes: link:https://github.com/apache/netbeans/pull/1219[https://github.com/apache/netbeans/pull/1219]
+- Open Recent file not working: link:https://github.com/apache/netbeans/pull/1216[https://github.com/apache/netbeans/pull/1216]
+- Added nb.laf.norestart system property to prevent restart on LaF changes: link:https://github.com/apache/netbeans/pull/1056[https://github.com/apache/netbeans/pull/1056]
 
 As a result you can now:
 
