finetuning text in 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -35,7 +35,9 @@ Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Inc
 
 == Java EE
 
-Payara integration out of the box, with thanks to the Payara team. Java EE 8 support for Maven-based and Gradle-based Web applications.
+- Java EE 8 support for Maven-based and Gradle-based Web applications. Ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
+- Support for GlassFish 5.0.1.
+- Payara integration out of the box for the first time, with thanks to the Payara team. 
 
 == Java
 
@@ -89,8 +91,6 @@ Payara integration out of the box, with thanks to the Payara team. Java EE 8 sup
 
 == NetBeans Platform / NetBeans APIs
 
-As a result you can now:
-
 - Create Mode from client code: link:https://github.com/apache/netbeans/pull/1135[https://github.com/apache/netbeans/pull/1135]
 - Adding Java-level registration for TextMate grammars: link:https://github.com/apache/netbeans/pull/1200[https://github.com/apache/netbeans/pull/1200]
 - Missing source level 11 and 12 in a NetBeans module project: link:https://github.com/apache/netbeans/pull/1194[https://github.com/apache/netbeans/pull/1194]
@@ -107,7 +107,3 @@ As a result you can now:
 - Popupswitcher npe fixes: link:https://github.com/apache/netbeans/pull/1219[https://github.com/apache/netbeans/pull/1219]
 - Open Recent file not working: link:https://github.com/apache/netbeans/pull/1216[https://github.com/apache/netbeans/pull/1216]
 - Added nb.laf.norestart system property to prevent restart on LaF changes: link:https://github.com/apache/netbeans/pull/1056[https://github.com/apache/netbeans/pull/1056]
-
-As a result you can now:
-
-- Popupswitcher npe fixes.
