integrating two pics

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -35,7 +35,11 @@ Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Inc
 
 == Java EE
 
-- Java EE 8 support for Maven-based and Gradle-based Web applications. Ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
+- Java EE 8 support, for the first time, for Maven-based and Gradle-based Web applications. 
+
+image::new-java-ee-8.png[Java EE 8 support, title="", role="left"]
+
+Ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
 - Support for GlassFish 5.0.1.
 - Payara integration out of the box for the first time, with thanks to the Payara team. 
 
@@ -46,6 +50,9 @@ Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Inc
 - Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
 - Inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
 - Code completion for JEP 325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
+
+image::code-completion-multiple-case.png[Multicase label completion, title="", role="left"]
+
 - Hint for converting to JEP 325 preview feature for switch expressions: link:https://github.com/apache/netbeans/pull/1193[https://github.com/apache/netbeans/pull/1193]
 - Java Migration profiles: link:https://github.com/apache/netbeans/pull/1212[https://github.com/apache/netbeans/pull/1212]
 - "main" is a new shortcut, that does the same as "psvm", i.e., creates 'public static void main': link:https://github.com/apache/netbeans/pull/1176[https://github.com/apache/netbeans/pull/1176]
