removing captions under pics

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -37,7 +37,7 @@ Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Inc
 
 - Java EE 8 support, for the first time, for Maven-based and Gradle-based Web applications. 
 
-image::new-java-ee-8.png[Java EE 8 support, title="", role="left"]
+image::new-java-ee-8.png[]
 
 Ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
 - Support for GlassFish 5.0.1.
@@ -51,7 +51,7 @@ Ability to create Java EE 8 applications and deploy to a Java EE 8 container, wi
 - Inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
 - Code completion for JEP 325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
 
-image::code-completion-multiple-case.png[Multicase label completion, title="", role="left"]
+image::code-completion-multiple-case.png[]
 
 - Hint for converting to JEP 325 preview feature for switch expressions: link:https://github.com/apache/netbeans/pull/1193[https://github.com/apache/netbeans/pull/1193]
 - Java Migration profiles: link:https://github.com/apache/netbeans/pull/1212[https://github.com/apache/netbeans/pull/1212]
