integrating new pics in 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -48,7 +48,10 @@ Ability to create Java EE 8 applications and deploy to a Java EE 8 container, wi
 === Java Editor
 
 - Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
-- Inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
+- Initial support for inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
+
+image::inline-parameters.png[]
+
 - Code completion for JEP 325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
 
 image::code-completion-multiple-case.png[]
@@ -77,6 +80,9 @@ image::code-completion-multiple-case.png[]
 
 - Gradle JavaEE Support: link:https://github.com/apache/netbeans/pull/1215[https://github.com/apache/netbeans/pull/1215]
 - Initial support for modular Java project in Gradle: link:https://github.com/apache/netbeans/pull/1276[https://github.com/apache/netbeans/pull/1276]
+
+image::gradle-jigsaw.png[]
+
 - Java Frontend Application wizard for Gradle: link:https://github.com/apache/netbeans/pull/1154[https://github.com/apache/netbeans/pull/1154]
 - Add debugger support for Gradle Web Projects: link:https://github.com/apache/netbeans/pull/1289[https://github.com/apache/netbeans/pull/1289]
 - Enable Always show Gradle Build output by default: link:https://github.com/apache/netbeans/pull/1220[https://github.com/apache/netbeans/pull/1220]
