adding tip and info re LTS

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -33,6 +33,8 @@
 
 Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[first release of the new quarterly release cycle].
 
+TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 11.1 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  link:https://netbeans.apache.org/download/nb110/nb110.html[Apache NetBeans 11.0], the current LTS release.
+
 == Java EE
 
 - Java EE 8 support, for the first time, for Maven-based and Gradle-based Web applications. 
