Tweaks and more info.

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -37,36 +37,34 @@ TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. Th
 
 == Java EE
 
-- Java EE 8 support, for the first time, for Maven-based and Gradle-based Web applications. 
+The highlights of enhancements in the Java EE area are the new Java EE 8 support, as well as the new and updated integration for Payara and GlassFish.
+
+- Java EE 8 support, for the first time, for Maven-based and Gradle-based Web applications. The new Java EE 8 support provides the ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
 
 image::new-java-ee-8.png[]
 
-Ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
-- Support for GlassFish 5.0.1.
 - Payara integration out of the box for the first time, with thanks to the Payara team. 
+- Support for GlassFish 5.0.1.
 
 == Java
 
 === Java Editor
+
+The highlights of enhancements in the Java area are the support for new Java language features, including those provided by JEP-325 and JEP-330.
 
 - Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
 - Initial support for inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
 
 image::inline-parameters.png[]
 
-- Code completion for JEP 325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
+- Code completion for JEP-325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
 
 image::code-completion-multiple-case.png[]
 
-- Hint for converting to JEP 325 preview feature for switch expressions: link:https://github.com/apache/netbeans/pull/1193[https://github.com/apache/netbeans/pull/1193]
+- Hint for converting to JEP-325 preview feature for switch expressions: link:https://github.com/apache/netbeans/pull/1193[https://github.com/apache/netbeans/pull/1193]
 - Java Migration profiles: link:https://github.com/apache/netbeans/pull/1212[https://github.com/apache/netbeans/pull/1212]
 - "main" is a new shortcut, that does the same as "psvm", i.e., creates 'public static void main': link:https://github.com/apache/netbeans/pull/1176[https://github.com/apache/netbeans/pull/1176]
 - Fixing automatic Jigsaw module name generation: link:https://github.com/apache/netbeans/pull/1274[https://github.com/apache/netbeans/pull/1274]
-
-=== Graal/Truffle
-
-- Using Graal.js 19.0.0 via Scripting in platform/core.network: link:https://github.com/apache/netbeans/pull/1092[https://github.com/apache/netbeans/pull/1092]
-- Separate Truffle source caches between multiple debugging sessions: link:https://github.com/apache/netbeans/pull/1252[https://github.com/apache/netbeans/pull/1252]
 
 === OpenJFX
 
@@ -93,8 +91,12 @@ image::gradle-jigsaw.png[]
 - Update TestSuites in a Gradle Test Run upon completion: link:https://github.com/apache/netbeans/pull/1254[https://github.com/apache/netbeans/pull/1254]
 - Fix startup message re Gradle position info: link:https://github.com/apache/netbeans/pull/1227[https://github.com/apache/netbeans/pull/1227] 
 
-=== Kotlin
+=== Other
 
+Other enhancements related to the Java area are listed below.
+
+- Using Graal.js 19.0.0 via Scripting in platform/core.network: link:https://github.com/apache/netbeans/pull/1092[https://github.com/apache/netbeans/pull/1092]
+- Separate Truffle source caches between multiple debugging sessions: link:https://github.com/apache/netbeans/pull/1252[https://github.com/apache/netbeans/pull/1252]
 - Syntax coloring for .kt files: link:https://github.com/apache/netbeans/pull/1228[https://github.com/apache/netbeans/pull/1228]
 - Correct license information for kotlin icon/grammar: link:https://github.com/apache/netbeans/pull/1229[https://github.com/apache/netbeans/pull/1229]
 
