further tweaks to 11.1 features page

--- a/netbeans.apache.org/src/content/download/nb111/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb111/index.asciidoc
@@ -48,9 +48,11 @@ image::new-java-ee-8.png[]
 
 == Java
 
+The highlights of enhancements in the Java area are the support for new Java language features, integration with Gluon OpenJFX samples, together with enhancements and fixes for usage of the Maven and Gradle build systems.
+
 === Java Editor
 
-The highlights of enhancements in the Java area are the support for new Java language features, including those provided by JEP-325 and JEP-330.
+The highlights of enhancements specifically in the Java Editor area are the support for new Java language features, including those provided by JEP-325 and JEP-330.
 
 - Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
 - Initial support for inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
@@ -68,7 +70,7 @@ image::code-completion-multiple-case.png[]
 
 === OpenJFX
 
-- OpenJFX samples included, with thanks to Gluon team: link:https://github.com/apache/netbeans/pull/1241[https://github.com/apache/netbeans/pull/1241]
+- OpenJFX samples included, with thanks to the Gluon team: link:https://github.com/apache/netbeans/pull/1241[https://github.com/apache/netbeans/pull/1241]
 
 === Maven
 
